--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script
+      src="//widget.cloudinary.com/global/all.js"
+      type="text/javascript"
+    ></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQDNfhtb8h7W2BZ8NXhODvpfP_Rr8xo8s&libraries=places"></script>
   </body>
 </html>
