--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,21 @@
       href="https://fonts.googleapis.com/css2?family=Spartan:wght@900&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&family=Montserrat:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&family=Montserrat:wght@300;400&family=Poppins:wght@600&display=swap"
+      rel="stylesheet"
     />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
