--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
       href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&family=Montserrat:wght@300;400&family=Poppins:wght@600&display=swap"
       rel="stylesheet"
     />
+    <link href="./styles.css" rel="stylesheet" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
